# healthbench_fork

./: main.py  notes.md  pyproject.toml  run_healthbench.sh
healthbench_scripts/: healthbench_analysis.ipynb
results/: .gitignore  cost_estimates.py  readme.md  result_extraction_conversation_level.ipynb  result_extraction_run_level.ipynb  result_manager.py
results/maverick/: healthbench_llama-4-maverick_20251023_212754.json
results/scout/: healthbench_llama-4-scout_20251023_153707.json
src/simple_evals/: browsecomp_eval.py  common.py  drop_eval.py  gpqa_eval.py  healthbench_eval.py  healthbench_meta_eval.py  humaneval_eval.py  math_eval.py  mgsm_eval.py  mmlu_eval.py  package_types.py  simple_evals.py  simpleqa_eval.py
src/simple_evals/sampler/: chat_completion_sampler.py  claude_sampler.py  enhanced_system_prompt.md  groq_rag_sampler.py  groq_sampler.py  groq_sampler_orig.py  o_chat_completion_sampler.py  responses_sampler.py
