[project]
name = "simple-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "blobfile>=3.1.0",
    "groq>=0.33.0",
    "human-eval",
    "ipython>=9.6.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.3",
    "openai>=2.3.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
human-eval = { path = "../human-eval/dist/human_eval-0.1.0-py3-none-any.whl" }
