[project]
name = "simple-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "blobfile>=3.1.0",
    "boto3>=1.40.59",
    "boto3-stubs[s3]>=1.40.59",
    "dot-slash>=1.0.0",
    "groq>=0.33.0",
    "human-eval",
    "ipython>=9.6.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "openai>=2.3.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "typer>=0.20.0",
]

[tool.uv.sources]
human-eval = { path = "../human-eval/dist/human_eval-0.1.0-py3-none-any.whl" }
